--- a/site/index.html
+++ b/site/index.html
@@ -20,29 +20,38 @@
     </div>
 
     <div>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/51CHNtNlFR8?si=J73XSQFTF-wGSic_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </section>
   <section class="categoria">
     <h2>Melhores Momentos em jogos</h2>
     <div class="categoria-videos">
-      <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-        <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+      <a href="https://www.youtube.com/watch?v=aXY7mc48Sj8">
+        <img src="https://img.youtube.com/vi/aXY7mc48Sj8/maxresdefault.jpg" />
       </a>
-      <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-        <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+      <a href="https://www.youtube.com/watch?v=QR8XaxZ0fEM">
+        <img src="https://img.youtube.com/vi/QR8XaxZ0fEM/maxresdefault.jpg" />
       </a>
-      <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-        <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+      <a href="https://www.youtube.com/watch?v=mBw2vhaCn_A">
+        <img src="https://img.youtube.com/vi/mBw2vhaCn_A/maxresdefault.jpg" />
       </a>
-      <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-        <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+      <a href="https://www.youtube.com/watch?v=cuLprHh_BRg">
+        <img src="https://img.youtube.com/vi/cuLprHh_BRg/maxresdefault.jpg" />
       </a>
-      <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-        <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+      <a href="https://www.youtube.com/watch?v=NHhTMh0nURA">
+        <img src="https://img.youtube.com/vi/NHhTMh0nURA/maxresdefault.jpg" />
+      </a>
+        <a href="https://www.youtube.com/watch?v=oHevHQ5y8Is">
+        <img src="https://img.youtube.com/vi/oHevHQ5y8Is/maxresdefault.jpg" />
+      </a>
+        <a href="https://www.youtube.com/watch?v=BQRW4nFyZ5A">
+        <img src="https://img.youtube.com/vi/BQRW4nFyZ5A/maxresdefault.jpg" />
+      </a>
+        <a href="https://www.youtube.com/watch?v=ijulC7Z4_V8">
+        <img src="https://img.youtube.com/vi/ijulC7Z4_V8/maxresdefault.jpg" />
+      </a>
+        <a href="https://www.youtube.com/watch?v=PfwSHC2J5NI">
+        <img src="https://img.youtube.com/vi/PfwSHC2J5NI/maxresdefault.jpg" />
       </a>
     </div>
   </section>
