--- a/site/index.html
+++ b/site/index.html
@@ -16,6 +16,9 @@
   <section class="chamada">
     <div class="chamada-texto">
       <h1>MELHORES JOADAS DO LEBRON JAMES</h1>
+      
+      <h2>Os lançes mais absurdos do nosso querido jogador Lebron James
+      nos Cavs Miami e Lakers</h2>
       <p>#lebronjames</p>
     </div>
 
